# libbinary_format

./: README.md  meson.build
include/libbinary_format/: data_reader.hpp  read_uint.hpp
src/: data_reader.cpp
test/include/: catch.hpp
test/src/: test.cpp
